# app/api/model/res/kms.res.go
@@ -13,3 +13,8 @@ type AccountListRes struct {
 type AddressRes struct {
 	Address string `json:"address" example:"0x216690cD286d8a9c8D39d9714263bB6AB97046F3"`
 }
+
+type AccountDeletionRes struct {
+	KeyID        string `json:"keyID" example:"f50a9229-e7c7-45ba-b06c-8036b894424e"`
+	DeletionDate string `json:"deleteionDate" example:"2023-12-11 03:21:18 +0000 UTC"`
+}
